syntax = "proto3";
package api;

import "api/contracts.proto";

option go_package = "github.com/clpombo/search/api";


service Broker {
    rpc BrokerChannel (BrokerChannelRequest) returns (BrokerChannelResponse) {}
    rpc RegisterProvider (RegisterProviderRequest) returns (RegisterProviderResponse) {}
}

message BrokerChannelRequest {
    Contract contract = 1;  // requirements contract
    // subset of contract's participants that are already decided. This should at least
    // include "self", with the initiator's RemoteParticpant data
    map<string, RemoteParticipant> preset_participants = 2;
}


message BrokerChannelResponse {
    enum Result {
        ACK = 0;
        ERR = 1;
    }
    Result result = 1;
}

message RegisterProviderRequest {
    Contract contract = 1;
    string url = 2;
}

// The registry assigns the provider an ID
message RegisterProviderResponse {
    string app_id = 1;
}

message RemoteParticipant {
    string url = 1;
    string app_id = 2;
}